--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,17 @@
         <maven.compiler.target>19</maven.compiler.target>
     </properties>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.fxml</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
         <dependency>
@@ -35,7 +46,7 @@
             <version>19.0.2.1</version>
         </dependency>
 
-
     </dependencies>
+
     
 </project>
