--- a/pom.xml
+++ b/pom.xml
@@ -95,5 +95,12 @@
             <version>${javafx.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.11.0</version>
+        </dependency>
+
+
     </dependencies>
 </project>
